--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,4 +32,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/app_background.png
-    - assets/images/app_background_1.png
+    - assets/images/app-back.png
+    - assets/images/
