--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  supabase_flutter: '>=1.10.0'
   uuid: ^4.0.0
   youtube_player_iframe: ^5.0.0
   share_plus: ^12.0.0
